# ProjectDemo

./: CMakeLists.txt  README  build.sh
config/: profile.xml
lib/curl-7.61.0/: libcurl.la  libcurl.so.4.5.0
lib/curl-7.61.0/pkgconfig/: libcurl.pc
lib/hiredis-0.13.3/: libhiredis.so.0.13
lib/hiredis-0.13.3/pkgconfig/: hiredis.pc
lib/librdkafka-0.11.5/: librdkafka++.so.1
lib/librdkafka-0.11.5/pkgconfig/: rdkafka++-static.pc  rdkafka++.pc  rdkafka-static.pc  rdkafka.pc
src/: ConfigModule.cpp  ConfigModule.h  LogModule.cpp  LogModule.h  WebModule.cpp  WebModule.h  WebService.cpp  WebService.h  main.cpp
src/base/: FileEx.cpp  HttpClient.h  IPFinder.cpp  IPFinder.h  KafkaConsumer.cpp  Log.cpp  RedisClient.cpp  RedisClient.h  String.cpp  Thread.h  base_include.h  ipip.cpp  ipip.h  singleton.h  typedef.h
src/public/: HttpClient.cpp  KafkaConsumer.h  KafkaProducer.cpp  KafkaProducer.h  Log.h  String.h  SystemInfo.cpp  SystemInfo.h  Thread.cpp  UdpSrv.cpp  WebServer.cpp  public_include.h
tmp/: KafkaConsumerH.cpp  KafkaConsumerH.h  KafkaProducerH.cpp  KafkaProducerH.h
